# LibraryInterfaceGenerator

./: README.md
prj/CSharpTypeConverter/: .gitignore  CSharpTypeConverter.sln
prj/CSharpTypeConverter/Application/: Program.cs
prj/CSharpTypeConverter/Wrapper/: CSharpTypeLibrary.cs
prj/CSharpTypeConverter/Wrapper/Properties/: launchSettings.json
prj/Callback/CSharpCallbackConverter/: CSharpCallbackConverter.sln
prj/Callback/CSharpCallbackConverter/Application/: Application.csproj
prj/Callback/CSharpCallbackConverter/Wrapper/: CSharpTypeLibrary.cs  Wrapper.csproj
prj/Callback/KotlinCallbackConverter/: settings.gradle.kts
prj/Callback/KotlinCallbackConverter/app/: build.gradle.kts
prj/Callback/KotlinCallbackConverter/app/src/main/: AndroidManifest.xml
prj/Callback/KotlinCallbackConverter/gradle/wrapper/: gradle-wrapper.properties
prj/Callback/KotlinCallbackConverter/wrapper/: build.gradle.kts
prj/Callback/KotlinCallbackConverter/wrapper/src/main/cpp/: CMakeLists.txt  wrapper.cpp
prj/KotlinTypeConverter/: settings.gradle
prj/KotlinTypeConverter/app/: build.gradle
prj/KotlinTypeConverter/app/src/main/: AndroidManifest.xml
prj/KotlinTypeConverter/app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
prj/KotlinTypeConverter/app/src/main/res/values-night/: themes.xml
prj/KotlinTypeConverter/gradle/wrapper/: gradle-wrapper.properties
prj/LibraryInterfaceGeneratorWindow/: .gitignore
prj/LibraryInterfaceGeneratorWindow/LibraryInterfaceGeneratorWindow/: CMakeLists.txt  LibraryInterfaceGeneratorWindow.cpp  LibraryInterfaceGeneratorWindow.h  path_example.json
prj/ManagedTypeConverter/: CMakeLists.txt  CMakeSettings.json  ManagedTypeConverterTest.cpp  temp.cpp
prj/TypeConverter/: CMakeLists.txt  KotlinWrapperConverterTest.cpp  NativeInterfaceConverterTest.cpp  TypeConverterTest.cpp
script/: makeConverter.py  makeNativeExternalLibrary.py
src/implementation/: Environment.hpp  LibraryInterfaceGenerator.cpp
src/implementation/Auxiliary/: Definition.hpp  IError.hpp  StringHelper.hpp
src/implementation/Auxiliary/PathTree/: ClassTable.cpp  ClassTable.hpp
src/implementation/Converter/: CXXConverter.hpp  KotlinConverter.hpp  KotlinWrapperConverter.cxx  KotlinWrapperConverter.hpp  NativerInterfaceConverter.cxx  NativerInterfaceConverter.hpp
src/implementation/Converter/KotlinWrapperConverter/: KotlinWrapperConverter.cxx  KotlinWrapperConverter.h
src/implementation/Converter/NativeInterfaceConverter/: NativeInterfaceConverter.cxx  NativeInterfaceConverter.h
src/implementation/Deliverable/NativeInterface/: NativeInterface.cpp  NativeInterface.hpp
src/implementation/Deliverable/NativeSourceDirectory/: NativeSourceDirectory.cpp  NativeSourceDirectory.hpp  TemporaryNativeSourceDirectory.cxx
src/implementation/Deliverable/SourceDirectory/: SourceDirectory.cpp  SourceDirectory.hpp
src/implementation/Deliverable/Wrapper/: Wrapper.cpp  Wrapper.hpp
src/implementation/ExternalLibrary/: KotlinExternalLibraryDirectory.cpp  KotlinExternalLibraryDirectory.hpp  NativeExternalLibraryDirectory.cpp  NativeExternalLibraryDirectory.hpp
src/implementation/ExternalLibrary/KotlinTypeConverter/: KotlinTypeConverter_cpp.h  KotlinTypeConverter_hpp.h  KotlinTypeConverter_kt.h
src/implementation/ExternalLibrary/KotlinWrapperConverter/: KotlinWrapperConverter.cxx  KotlinWrapperConverter.h  KotlinWrapperConverter_cpp.h
src/implementation/ExternalLibrary/Log/: Log.cxx  Log_cpp.h  Log_hpp.h
src/implementation/ExternalLibrary/ManagedTypeConverter/: ManagedTypeConverter_cpp.h  ManagedTypeConverter_hpp.h
src/implementation/ExternalLibrary/MemoryPool/: MemoryPool.h  MemoryPool.hxx  MemoryPoolImpl_hpp.h  MemoryPool_cpp.h  MemoryPool_hpp.h
src/implementation/ExternalLibrary/NativeInterfaceConverter/: NativeInterfaceConverter.cxx  NativeInterfaceConverter_cpp.h
src/implementation/ExternalLibrary/Tag/: Tag_hpp.h
src/implementation/FileSystem/: FileSystem.cpp  FileSystem.hpp
src/implementation/NativeExternalLibraryDirectory/: NativeExternalLibraryDirectory.cpp  NativeExternalLibraryDirectory.hpp
src/implementation/NativeExternalLibraryDirectory/Log/: Log.cxx  Log.h  Log.hxx
src/implementation/NativeExternalLibraryDirectory/MemoryPool/: MemoryPool.cxx  MemoryPool.h  MemoryPool.hxx
src/implementation/NativeInterface/: NativeInterface.cpp  NativeInterface.hpp
src/implementation/NativeSourceDirectory/: NativeSourceDirectory.cpp  NativeSourceDirectory.hpp  NativeSourceStream.cpp  NativeSourceStream.hpp
src/implementation/NativeSourceStream/: NativeSourceStream.cpp  NativeSourceStream.hpp
src/implementation/Result/: Result.hpp
src/implementation/SourceDirectory/: SourceDirectory.cpp  SourceDirectory.hpp
src/implementation/SourceStream/: CXXSourceStream.cpp  CXXSourceStream.hpp  KotlinSourceStream.cpp  KotlinSourceStream.hpp  NativeSourceStream.cpp  NativeSourceStream.hpp  SourceStream.cpp  SourceStream.hpp  UIDGenerator.hpp
src/implementation/SymbolTable/: SymbolDeclarations.hpp  SymbolTable.cpp  SymbolTable.hpp
src/implementation/SymbolTable/Symbol/: SymbolCallback.cpp  SymbolCallback.hpp  SymbolClass.cpp  SymbolClass.hpp  SymbolEnum.cpp  SymbolEnum.hpp  SymbolInterface.cpp  SymbolInterface.hpp  SymbolMethod.cpp  SymbolMethod.hpp  SymbolModule.cpp  SymbolModule.hpp  SymbolObject.cpp  SymbolObject.hpp  SymbolPackage.cpp  SymbolPackage.hpp  SymbolParameter.cpp  SymbolParameter.hpp  SymbolProperty.cpp  SymbolProperty.hpp  SymbolType.cpp  SymbolType.hpp
src/implementation/Wrapper/: Converter.hpp  Wrapper.cpp  Wrapper.hpp
src/include/: LibraryInterfaceGenerator.hpp
test/: dicomcomformance.txt
test/sample/: HsnUltrasoundDICOM.json  attribute.md  sans.kt
test/test/: main.cpp
test/test/Deliverable/NativeInterface/: NativeInterfaceTest.cpp
test/test/Deliverable/NativeSourceDirectory/: NativeSourceDirectoryTest.cpp
test/test/Deliverable/SourceDirectory/: SourceDirectoryTest.cpp
test/test/Deliverable/Wrapper/: WrapperTest.cpp
test/test/SourceStream/: CXXSourceStreamTest.cpp  KotlinSourceStreamTest.cpp  SourceStreamTest.cpp
(+19 files in other folders)
